Add route for listing token transfers
